Typography and Button Section

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
     </header>
 
-    <div id="banner" class="category-row">
+    <section id="banner" class="category-row">
       <h1>PORTFOLIO STYLE GUIDE</h1>
       <p>Color Palette, Typography, Buttons</p>
-    </div>
+    </section>
 
-    <div id="colors" class="category-row">
+    <section id="colors" class="category-row">
       <h2>Color Palette</h2>
 
       <div class="item-wrapper">
@@ -31,17 +31,91 @@
           <p>#343e4a</p>
         </div>
         <div id="fourth-color" class="color-block">
-          <p>ababab</p>
+          <p>#ababab</p>
         </div>
       </div>
 
-    </div>
+    </section>
 
-    <div id="typography" class="category-row">
-    </div>
+    <section id="typography" class="category-row">
+      <h2>Typography</h2>
 
-    <div id="buttons" class="category-row">
-    </div>
+      <div class="item-wrapper">
+        <div class="heading-wrapper">
+          <div id="top-heading">
+            <h1>Heading 1</h1>
+          </div>
+          <h3>Uses</h3>
+          <p>Main heading for entire website</p>
+          <h3>Colors</h3>
+          <div id="color-pack-one">
+            <p>#032245</p>
+          </div>
+          <h3>Font</h3>
+          <p>Avenir Next Bold</p>
+          <h3>Size</h3>
+          <p>5 rem</p>
+        </div>
+
+        <div class="heading-wrapper">
+          <div id="top-heading">
+            <h2>Heading 2</h2>
+          </div>
+          <h3>Uses</h3>
+          <p>Subheadings for sections</p>
+          <h3>Colors</h3>
+          <div id="color-pack-two">
+            <p>#56667a</p>
+          </div>
+          <h3>Font</h3>
+          <p>Avenir Next Regular</p>
+          <h3>Size</h3>
+          <p>3 rem</p>
+        </div>
+
+        <div class="heading-wrapper">
+          <div id="top-heading">
+            <h3>Heading 3</h3>
+          </div>
+          <h3>Uses</h3>
+          <p>Subheadings within sections</p>
+          <h3>Colors</h3>
+          <div id="color-pack-three">
+            <p>#032245</p>
+          </div>
+          <h3>Font</h3>
+          <p>Avenir Next Regular</p>
+          <h3>Size</h3>
+          <p>1.5 rem</p>
+        </div>
+
+        <div class="heading-wrapper">
+          <div id="top-heading">
+            <p>Paragraph</p>
+          </div>
+          <h3>Uses</h3>
+          <p>Body Text</p>
+          <h3>Colors</h3>
+          <div id="color-pack-four">
+            <p>#343e4a</p>
+          </div>
+          <h3>Font</h3>
+          <p>Monsterrat Regular</p>
+          <h3>Size</h3>
+          <p>1.5 rem</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="buttons" class="category-row">
+      <h2>Buttons</h2>
+      <div class="item-wrapper">
+        <div class="button-pack">
+          <a href="#" class="button-confirm">Confirm</a>
+          <a href="#" class="button-cancel">Cancel</a>
+        </div>
+      </div>
+    </section>
 
   </body>
 </html>
