Edited buttion section button layout

--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@
       <h2>Buttons</h2>
       <div class="item-wrapper">
         <div class="button-pack">
-          <a href="#" class="button-confirm">Confirm</a>
-          <a href="#" class="button-cancel">Cancel</a>
+          <div class="left-button">
+            <a href="#" class="button-confirm">Confirm</a>
+          </div>
+          <div class="right-button">
+            <a href="#" class="button-cancel">Cancel</a>
+          </div>
         </div>
       </div>
     </section>
