Flexibility for Mobile and Smaller Width Screen

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Portfolio</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
@@ -14,11 +15,15 @@
 
     <section id="banner" class="category-row">
       <h1>PORTFOLIO STYLE GUIDE</h1>
-      <p>Color Palette, Typography, Buttons</p>
+        <nav>
+          <a href="#colors">Colors</a>
+          <a href="#typography">Typography</a>
+          <a href="#buttons">Buttons</a>
+        </nav>
     </section>
 
     <section id="colors" class="category-row">
-      <h2>Color Palette</h2>
+      <h2>Colors</h2>
 
       <div class="item-wrapper">
         <div id="first-color" class="color-block">
