--- a/styleguide.html
+++ b/styleguide.html
@@ -4,7 +4,7 @@
   <head>
     <title>Portfolio</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/styleguide.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
