--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     </header>
 
     <section id="banner" class="category-row">
-      <h1>BRANDON KANEGAE-TSE</h1>
+        <div class="name-title">
+          <h1>BRANDON KANEGAE-TSE</h1>
+        </div>
         <nav>
-          <a href="#projects">Projects</a>
-          <a href="#about">About</a>
+          <a href="index.html">Projects</a>
+          <a href="about.html">About</a>
           <a href="#contact">Contact</a>
         </nav>
     </section>
