--- a/styleguide.html
+++ b/styleguide.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Portfolio</title>
+    <title>Portfolio Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styleguide.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
