--- a/about.html
+++ b/about.html
@@ -19,22 +19,23 @@
           <h1>BRANDON KANEGAE-TSE</h1>
         </div>
         <nav>
-          <a href="#projects">Projects</a>
-          <a href="#about">About</a>
+          <a href="index.html">Projects</a>
+          <a href="about.html">About</a>
           <a href="#contact">Contact</a>
         </nav>
     </section>
 
-    <section id="about" class="category-row">
-      <div class="biography">
-        <p>Hello, my name is Brandon and I am a 3D artist and graphic designer based in Vancouver, BC. I am currently finishing my Bachelors of Arts Degree at Simon Fraser University in the School of Interactive Arts and Technology. I am always thriving to be better and always willing to advance my skills.</p>
+    <section id="about" class="category-row-about">
+      <div class="biography-image">
+        <img src="img/placeholders/placeholder1.jpg">
       </div>
-      <div class="design-titles">
+      <div class="biography">
         <h4>3D ARTIST</h4>
         <h4>GRAPHIC DESIGNER</h4>
         <h4>UI DESIGNER</h4>
+        <p>I am a 3D artist and graphic designer based in Vancouver, BC. I am currently finishing my Bachelors of Arts Degree at Simon Fraser University in the School of Interactive Arts and Technology. I am always thriving to be better and always willing to advance my skills.</p>
       </div>
-    </div>
+    </section>
 
   </body>
 </html>
