--- a/index.html
+++ b/index.html
@@ -22,27 +22,18 @@
           <a href="index.html">Projects</a>
           <a href="about.html">About</a>
           <a href="#contact">Contact</a>
+          <a href="styleguide.html">Style Guide</a>
+
         </nav>
     </section>
 
     <section id="projects" class="project-grid">
       <div class="grid-item">
-        <img src="img/placeholders/placeholder1.jpg">
+        <img src="img/portfolioAlien.png">
       </div>
+
       <div class="grid-item">
-        <img src="img/placeholders/placeholder2.jpg">
-      </div>
-      <div class="grid-item">
-        <img src="img/placeholders/placeholder3.jpg">
-      </div>
-      <div class="grid-item">
-        <img src="img/placeholders/placeholder4.jpeg">
-      </div>
-      <div class="grid-item">
-        <img src="img/placeholders/placeholder5.jpg">
-      </div>
-      <div class="grid-item">
-        <img src="img/placeholders/placeholder6.jpg">
+        <img src="img/portfolioGun.png">
       </div>
     </section>
 
