--- a/styleguide.html
+++ b/styleguide.html
@@ -27,16 +27,19 @@
 
       <div class="item-wrapper">
         <div id="first-color" class="color-block">
-          <p>#032245</p>
+          <p>#d1cd92</p>
         </div>
         <div id="second-color" class="color-block">
-          <p>#56667a</p>
+          <p>#065ec2</p>
         </div>
         <div id="third-color" class="color-block">
-          <p>#343e4a</p>
+          <p>#91accf</p>
         </div>
         <div id="fourth-color" class="color-block">
           <p>#ababab</p>
+        </div>
+        <div id="fifth-color" class="color-block">
+          <p>#ffffff</p>
         </div>
       </div>
 
@@ -54,7 +57,7 @@
           <p>Main heading for entire website</p>
           <h3>Colors</h3>
           <div id="color-pack-one">
-            <p>#032245</p>
+            <p>#d1cd92</p>
           </div>
           <h3>Font</h3>
           <p>Avenir Next Bold</p>
@@ -70,7 +73,7 @@
           <p>Subheadings for sections</p>
           <h3>Colors</h3>
           <div id="color-pack-two">
-            <p>#56667a</p>
+            <p>#91accf</p>
           </div>
           <h3>Font</h3>
           <p>Avenir Next Regular</p>
@@ -86,7 +89,7 @@
           <p>Subheadings within sections</p>
           <h3>Colors</h3>
           <div id="color-pack-three">
-            <p>#032245</p>
+            <p>#91accf</p>
           </div>
           <h3>Font</h3>
           <p>Avenir Next Regular</p>
@@ -102,12 +105,12 @@
           <p>Body Text</p>
           <h3>Colors</h3>
           <div id="color-pack-four">
-            <p>#343e4a</p>
+            <p>#ababab</p>
           </div>
           <h3>Font</h3>
           <p>Monsterrat Regular</p>
           <h3>Size</h3>
-          <p>1.5 rem</p>
+          <p>1 rem</p>
         </div>
       </div>
     </section>
@@ -117,13 +120,17 @@
       <div class="item-wrapper">
         <div class="button-pack">
           <div class="left-button">
-            <a href="#" class="button-confirm">Confirm</a>
+            <a href="#" class="button-cancel">Back</a>
           </div>
           <div class="right-button">
-            <a href="#" class="button-cancel">Cancel</a>
+            <a href="#" class="button-confirm">Next</a>
           </div>
         </div>
       </div>
+    </section>
+
+    <section id="footer" class="category-row">
+
     </section>
 
   </body>
