--- a/about.html
+++ b/about.html
@@ -26,13 +26,11 @@
     </section>
 
     <section id="about" class="category-row-about">
-      <div class="biography-image">
-        <img src="img/placeholders/placeholder1.jpg">
-      </div>
+      <!-- <div class="biography-image">
+        <img src="img/profileImage.png">
+      </div> -->
       <div class="biography">
         <h4>3D ARTIST</h4>
-        <h4>GRAPHIC DESIGNER</h4>
-        <h4>UI DESIGNER</h4>
         <p>I am a 3D artist and graphic designer based in Vancouver, BC. I am currently finishing my Bachelors of Arts Degree at Simon Fraser University in the School of Interactive Arts and Technology. I am always thriving to be better and always willing to advance my skills.</p>
       </div>
     </section>
