Overall layout changed & Added text on project img

--- a/about.html
+++ b/about.html
@@ -15,23 +15,44 @@
     </header>
 
     <section id="banner" class="category-row">
-        <div class="name-title">
-          <h1>BRANDON KANEGAE-TSE</h1>
-        </div>
+
         <nav>
-          <a href="index.html">Projects</a>
+          <a href="index.html">3D Art</a>
+          <a href="index.html">Graphic Design</a>
           <a href="about.html">About</a>
-          <a href="#contact">Contact</a>
+          <a href="contact.html">Contact</a>
         </nav>
+        <div class="name-title">
+          <h1>ABOUT ME</h1>
+        </div>
     </section>
 
     <section id="about" class="category-row-about">
-      <!-- <div class="biography-image">
-        <img src="img/profileImage.png">
-      </div> -->
-      <div class="biography">
-        <h4>3D ARTIST</h4>
-        <p>I am a 3D artist and graphic designer based in Vancouver, BC. I am currently finishing my Bachelors of Arts Degree at Simon Fraser University in the School of Interactive Arts and Technology. I am always thriving to be better and always willing to advance my skills.</p>
+      <div class="my-name">
+        <h2>Brandon Kanegae-Tse</h2>
+      </div>
+      <div class="page-label">
+        <h3>3D Artist</h3>
+        <h3>|</h3>
+        <h3>Graphic Designer</h3>
+      </div>
+      <div class="bio-wrapper">
+        <div class="biography">
+          <p>I am a 3D artist and graphic designer based in Vancouver, BC. I am currently finishing my Bachelors of Arts Degree at Simon Fraser University in the School of Interactive Arts and Technology. I am always thriving to be better and always willing to advance my skills.</p>
+        </div>
+      </div>
+      <div class="programs">
+        <h3>Program Knowledge</h3>
+      </div>
+      <div class="program-labels">
+        <p>Maya</p>
+        <p>Blender</p>
+        <p>ZBrush</p>
+        <p>Photoshop</p>
+        <p>Illustrator</p>
+        <p>Premiere</p>
+        <p>HTML & CSS</p>
+        <p>Figma</p>
       </div>
     </section>
 
