--- a/index.html
+++ b/index.html
@@ -15,25 +15,45 @@
     </header>
 
     <section id="banner" class="category-row">
-        <div class="name-title">
-          <h1>BRANDON KANEGAE-TSE</h1>
-        </div>
         <nav>
-          <a href="index.html">Projects</a>
+          <a href="index.html">3D Art</a>
+          <a href="index.html">Graphic Design</a>
           <a href="about.html">About</a>
-          <a href="#contact">Contact</a>
+          <a href="contact.html">Contact</a>
           <a href="styleguide.html">Style Guide</a>
-
         </nav>
+        <div class="name-title">
+          <h1>3D ART</h1>
+        </div>
     </section>
 
     <section id="projects" class="project-grid">
       <div class="grid-item">
-        <img src="img/portfolioAlien.png">
+        <div class="project-image">
+          <img src="img/portfolioAlien.png" alt="Alien Character">
+        </div>
+        <div class="overlay-one">
+          <div class="overlay-title">
+            <h2>Alien Character</h2>
+          </div>
+          <div class="overlay-description">
+            <h3>Organic Model</h3>
+          </div>
+        </div>
       </div>
 
       <div class="grid-item">
-        <img src="img/portfolioGun.png">
+        <div class="project-image">
+          <img src="img/portfolioGun.png" alt="Futuristic Gun">
+        </div>
+        <div class="overlay-two">
+          <div class="overlay-title">
+            <h2>Futuristic Gun</h2>
+          </div>
+          <div class="overlay-description">
+            <h3>Hard Surface Model</h3>
+          </div>
+        </div>
       </div>
     </section>
 
