--- a/styleguide.html
+++ b/styleguide.html
@@ -76,7 +76,7 @@
             <p>#91accf</p>
           </div>
           <h3>Font</h3>
-          <p>Avenir Next Regular</p>
+          <p>Avenir Next Bold</p>
           <h3>Size</h3>
           <p>3 rem</p>
         </div>
