Hover effect on project images

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <section id="banner" class="category-row">
         <nav>
-          <a href="index.html">3D Art</a>
-          <a href="index.html">Graphic Design</a>
+          <a href="index.html#3d-projects">3D Art</a>
+          <a href="index.html#graphic-projects">Graphic Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <a href="styleguide.html">Style Guide</a>
@@ -27,7 +27,7 @@
         </div>
     </section>
 
-    <section id="projects" class="project-grid">
+    <section id="3d-projects" class="project-grid">
       <div class="grid-item">
         <div class="project-image">
           <img src="img/portfolioAlien.png" alt="Alien Character">
@@ -55,6 +55,43 @@
           </div>
         </div>
       </div>
+    </section>
+
+
+    <section id="graphic-title" class="category-row">
+      <div class="name-title">
+        <h1>GRAPHIC DESIGN</h1>
+      </div>
+    </section>
+
+    <section id="graphic-projects" class="project-grid" class="project-grid-one-item">
+      <div class="grid-item">
+        <div class="project-image">
+          <img src="img/cardBack.png" alt="Alien Character">
+        </div>
+        <div class="overlay-three">
+          <div class="overlay-title">
+            <h2>Dessert Company</h2>
+          </div>
+          <div class="overlay-description">
+            <h3>Business Card</h3>
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="grid-item">
+        <div class="project-image">
+          <img src="img/portfolioGun.png" alt="Futuristic Gun">
+        </div>
+        <div class="overlay-two">
+          <div class="overlay-title">
+            <h2>Futuristic Gun</h2>
+          </div>
+          <div class="overlay-description">
+            <h3>Hard Surface Model</h3>
+          </div>
+        </div>
+      </div> -->
     </section>
 
   </body>
