Fixed hover of text on image

--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
 
     <section id="banner" class="category-row">
         <nav>
-          <a href="index.html">3D Art</a>
-          <a href="index.html">Graphic Design</a>
+          <a href="index.html#3d-projects">3D Art</a>
+          <a href="index.html#graphic-projects">Graphic Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <a href="styleguide.html">Style Guide</a>
