--- a/index.html
+++ b/index.html
@@ -30,30 +30,34 @@
     <section id="3d-projects" class="project-grid">
       <div class="grid-item">
         <div class="project-image">
-          <img src="img/portfolioAlien.png" alt="Alien Character">
+          <a href="project1.html"><img src="img/portfolioAlien.png" alt="Alien Character"></a>
         </div>
-        <div class="overlay-one">
-          <div class="overlay-title">
-            <h2>Alien Character</h2>
+        <a href="project1.html">
+          <div class="overlay-one">
+            <div class="overlay-title">
+              <h2>Organic Model</h2>
+            </div>
+            <div class="overlay-description">
+              <h3>Alien Character</h3>
+            </div>
           </div>
-          <div class="overlay-description">
-            <h3>Organic Model</h3>
-          </div>
-        </div>
+        </a>
       </div>
 
       <div class="grid-item">
         <div class="project-image">
-          <img src="img/portfolioGun.png" alt="Futuristic Gun">
+          <a href="project2.html"><img src="img/portfolioGun.png" alt="Futuristic Gun"></a>
         </div>
-        <div class="overlay-two">
-          <div class="overlay-title">
-            <h2>Futuristic Gun</h2>
+        <a href="project2.html">
+          <div class="overlay-two">
+            <div class="overlay-title">
+              <h2>Hard Surface Model</h2>
+            </div>
+            <div class="overlay-description">
+              <h3>Futuristic Gun</h3>
+            </div>
           </div>
-          <div class="overlay-description">
-            <h3>Hard Surface Model</h3>
-          </div>
-        </div>
+        </a>
       </div>
     </section>
 
@@ -67,16 +71,18 @@
     <section id="graphic-projects" class="project-grid" class="project-grid-one-item">
       <div class="grid-item">
         <div class="project-image">
-          <img src="img/cardBack.png" alt="Alien Character">
+          <a href="project3.html"><img src="img/cardBack.png" alt="Business Card"></a>
         </div>
-        <div class="overlay-three">
-          <div class="overlay-title">
-            <h2>Dessert Company</h2>
+        <a href="project3.html">
+          <div class="overlay-three">
+            <div class="overlay-title">
+              <h2>Business Card</h2>
+            </div>
+            <div class="overlay-description">
+              <h3>Dessert Company</h3>
+            </div>
           </div>
-          <div class="overlay-description">
-            <h3>Business Card</h3>
-          </div>
-        </div>
+        </a>
       </div>
 
       <!-- <div class="grid-item">
