Detailed project page

--- a/styleguide.html
+++ b/styleguide.html
@@ -18,6 +18,7 @@
           <a href="#colors">Colors</a>
           <a href="#typography">Typography</a>
           <a href="#buttons">Buttons</a>
+          <a href="index.html">Portfolio</a>
         </nav>
         <h1>PORTFOLIO STYLE GUIDE</h1>
     </section>
