Updated style guide & added project description pages

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
       </div>
       <div class="bio-wrapper">
         <div class="biography">
-          <p>I am a 3D artist and graphic designer based in Vancouver, BC. I am currently finishing my Bachelors of Arts Degree at Simon Fraser University in the School of Interactive Arts and Technology. I am always thriving to be better and always willing to advance my skills.</p>
+          <p>I am a 3D artist and graphic designer based in Vancouver, BC. I am currently finishing my Bachelors of Arts Degree at Simon Fraser University in the School of Interactive Arts and Technology. The vast styles of 3D art intrigue me, as I enjoy expanding my creativity by designing unique 3D models to fit into their destined environments.</p>
         </div>
       </div>
       <div class="programs">
