--- a/project1.html
+++ b/project1.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styleguide.css">
     <link rel="stylesheet" href="css/main.css">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/fe147576fd.js" crossorigin="anonymous"></script>
+
   </head>
 
   <body>
@@ -31,29 +33,52 @@
       <div class="finished-project">
         <img src="img/portfolioAlien.png" alt="Alien Character">
       </div>
-      <h3>Programs Used</h3>
-      <p>ZBrush, Maya</p>
+      <div class="programs">
+        <h3>Programs Used</h3>
+        <p>ZBrush, Maya</p>
+      </div>
+      <div class="write-up">
+        <p>Hello World</p>
+      </div>
 
       <h2>Process</h2>
       <div class="process-wrapper">
+
         <div id="process-one" class="process-img">
-          <img src="img/alienProcess/process1.png" alt="Alien Character">
+          <img src="img/alienProcess/process1.png" alt="Alien Character Process 1">
           <p>Sculpting the character from a sphere in ZBrush</p>
+          <i class="fas fa-arrow-right"></i>
         </div>
+
         <div id="process-two" class="process-img">
-          <img src="img/alienProcess/process2.png" alt="Alien Character">
+          <img src="img/alienProcess/process2.png" alt="Alien Character Process 2">
           <p>ZRemesher to retopologize triangles into squares</p>
+          <i class="fas fa-arrow-right"></i>
         </div>
+
         <div id="process-three" class="process-img">
-          <img src="img/alienProcess/process3.png" alt="Alien Character">
+          <img src="img/alienProcess/process3.png" alt="Alien Character Process 3">
           <p>Modelled armour based off topology of character in Maya</p>
+          <i class="fas fa-arrow-right"></i>
         </div>
+
         <div id="process-one" class="process-img">
-          <img src="img/alienProcess/process4.png" alt="Alien Character">
+          <img src="img/alienProcess/process4.png" alt="Alien Character Process 4">
           <p>Added more subdivisions to mesh to create smoothness</p>
+          <i class="fas fa-arrow-right"></i>
         </div>
+
       </div>
     </section>
+
+    <div class="project-buttons">
+      <div class="left-button">
+        <a href="project3.html" class="button-cancel">Previous Project</a>
+      </div>
+      <div class="right-button">
+        <a href="project2.html" class="button-confirm">Next Project</a>
+      </div>
+    </div>
 
   </body>
 </html>
