--- a/styleguide.html
+++ b/styleguide.html
@@ -17,7 +17,9 @@
         <nav>
           <a href="#colors">Colors</a>
           <a href="#typography">Typography</a>
+          <a href="#navigation">Navigation</a>
           <a href="#buttons">Buttons</a>
+          <a href="#images">Interactive Images</a>
           <a href="index.html">Portfolio</a>
         </nav>
         <h1>PORTFOLIO STYLE GUIDE</h1>
@@ -27,17 +29,17 @@
       <h2>Colors</h2>
 
       <div class="item-wrapper">
-        <div id="first-color" class="color-block">
+        <!-- <div id="first-color" class="color-block">
           <p>#d1cd92</p>
-        </div>
+        </div> -->
         <div id="second-color" class="color-block">
           <p>#065ec2</p>
         </div>
         <div id="third-color" class="color-block">
-          <p>#91accf</p>
+          <p>#70788a</p>
         </div>
         <div id="fourth-color" class="color-block">
-          <p>#ababab</p>
+          <p>#b2b6bf</p>
         </div>
         <div id="fifth-color" class="color-block">
           <p>#ffffff</p>
@@ -58,7 +60,7 @@
           <p>Main heading for entire website</p>
           <h3>Colors</h3>
           <div id="color-pack-one">
-            <p>#d1cd92</p>
+            <p>#70788a</p>
           </div>
           <h3>Font</h3>
           <p>Avenir Next Bold</p>
@@ -74,7 +76,7 @@
           <p>Subheadings for sections</p>
           <h3>Colors</h3>
           <div id="color-pack-two">
-            <p>#91accf</p>
+            <p>#b2b6bf</p>
           </div>
           <h3>Font</h3>
           <p>Avenir Next Bold</p>
@@ -90,7 +92,7 @@
           <p>Subheadings within sections</p>
           <h3>Colors</h3>
           <div id="color-pack-three">
-            <p>#91accf</p>
+            <p>#b2b6bf</p>
           </div>
           <h3>Font</h3>
           <p>Avenir Next Regular</p>
@@ -106,13 +108,26 @@
           <p>Body Text</p>
           <h3>Colors</h3>
           <div id="color-pack-four">
-            <p>#ababab</p>
+            <p>#b2b6bf</p>
           </div>
           <h3>Font</h3>
           <p>Monsterrat Regular</p>
           <h3>Size</h3>
           <p>1 rem</p>
         </div>
+      </div>
+    </section>
+
+    <section id="navigation" class="category-row">
+      <h2>Navigation</h2>
+      <div class="item-wrapper">
+        <nav>
+          <a href="#">Colors</a>
+          <a href="#">Typography</a>
+          <a href="#">Navigation</a>
+          <a href="#">Buttons</a>
+          <a href="#">Interactive Images</a>
+        </nav>
       </div>
     </section>
 
@@ -130,8 +145,31 @@
       </div>
     </section>
 
-    <section id="footer" class="category-row">
+    <section id="images" class="category-row">
+      <h2>Interactive Images</h2>
+      <div class="item-wrapper">
+        <div class="grid-item">
+          <div class="project-image">
+            <a href="#images"><img src="img/portfolioAlien.png" alt="Alien Character"></a>
+          </div>
+          <a href="#images">
+            <div class="overlay-one">
+              <div class="overlay-title">
+                <h2>Project Type</h2>
+              </div>
+              <div class="overlay-description">
+                <h3>Project Name</h3>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
 
+    <section id="footer" class="category-row">
+      <a href="styleguide.html">
+        Link to Style Guide
+      </a>
     </section>
 
   </body>
