flexibility added to buttons & project description page

--- a/project3.html
+++ b/project3.html
@@ -25,7 +25,7 @@
           <a href="styleguide.html">Style Guide</a>
         </nav>
         <div class="name-title">
-          <h1>GRAPIC DESIGN - Business Card</h1>
+          <h1>GRAPHIC DESIGN - Business Card</h1>
         </div>
     </section>
 
