style guide flexibility updated

--- a/styleguide.html
+++ b/styleguide.html
@@ -22,7 +22,7 @@
           <a href="#images">Interactive Images</a>
           <a href="index.html">Portfolio</a>
         </nav>
-        <h1>PORTFOLIO STYLE GUIDE</h1>
+        <h1>STYLE GUIDE</h1>
     </section>
 
     <section id="colors" class="category-row">
@@ -49,7 +49,9 @@
     </section>
 
     <section id="typography" class="category-row">
-      <h2>Typography</h2>
+      <div class="title">
+        <h2>Typography</h2>
+      </div>
 
       <div class="item-wrapper">
         <div class="heading-wrapper">
@@ -166,11 +168,11 @@
       </div>
     </section>
 
-    <section id="footer" class="category-row">
+    <!-- <section id="footer" class="category-row">
       <a href="styleguide.html">
         Link to Style Guide
       </a>
-    </section>
+    </section> -->
 
   </body>
 </html>
