--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
           <a href="styleguide.html">Style Guide</a>
         </nav>
         <div class="name-title">
-          <h1>CONTACT INFORMATION</h1>
+          <h1>CONTACT</h1>
         </div>
     </section>
 
