--- a/references.html
+++ b/references.html
@@ -15,31 +15,26 @@
     </header>
 
     <section id="banner" class="category-row">
-        <nav>
+        <!-- <nav>
           <a href="index.html#3d-projects">3D Art</a>
           <a href="index.html#graphic-projects">Graphic Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
-          <!-- <a href="styleguide.html">Style Guide</a> -->
-        </nav>
+        </nav> -->
         <div class="name-title">
-          <h1>CONTACT</h1>
+          <h1>REFERENCES</h1>
         </div>
-    </section>
-
-    <section id="contact" class="project-grid">
-
     </section>
 
     <section id="footer" class="category-row">
       <div id="first-link" class="footer-link">
-        <a href="styleguide.html">
-          Style Guide
+        <a href="index.html">
+          Portfolio
         </a>
       </div>
       <div id="second-link" class="footer-link">
-        <a href="references.html">
-          References
+        <a href="styleguide.html">
+          Style Guide
         </a>
       </div>
       <div id="third-link" class="footer-link">
