--- a/styleguide.html
+++ b/styleguide.html
@@ -20,7 +20,7 @@
           <a href="#navigation">Navigation</a>
           <a href="#buttons">Buttons</a>
           <a href="#images">Interactive Images</a>
-          <a href="index.html">Portfolio</a>
+          <!-- <a href="index.html">Portfolio</a> -->
         </nav>
         <h1>STYLE GUIDE</h1>
     </section>
@@ -168,11 +168,23 @@
       </div>
     </section>
 
-    <!-- <section id="footer" class="category-row">
-      <a href="styleguide.html">
-        Link to Style Guide
-      </a>
-    </section> -->
+    <section id="footer" class="category-row">
+      <div id="first-link" class="footer-link">
+        <a href="index.html">
+          Portfolio
+        </a>
+      </div>
+      <div id="second-link" class="footer-link">
+        <a href="references.html">
+          References
+        </a>
+      </div>
+      <div id="third-link" class="footer-link">
+        <a href="https://github.com/brankaytee/Portfolio.git">
+          Git
+        </a>
+      </div>
+    </section>
 
   </body>
 </html>
