--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
           <a href="index.html#graphic-projects">Graphic Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
-          <a href="styleguide.html">Style Guide</a>
+          <!-- <a href="styleguide.html">Style Guide</a> -->
         </nav>
         <div class="name-title">
           <h1>ABOUT ME</h1>
@@ -54,6 +54,24 @@
         <p>Premiere</p>
         <p>HTML & CSS</p>
         <p>Figma</p>
+      </div>
+    </section>
+
+    <section id="footer" class="category-row">
+      <div id="first-link" class="footer-link">
+        <a href="styleguide.html">
+          Style Guide
+        </a>
+      </div>
+      <div id="second-link" class="footer-link">
+        <a href="references.html">
+          References
+        </a>
+      </div>
+      <div id="third-link" class="footer-link">
+        <a href="https://github.com/brankaytee/Portfolio.git">
+          Git
+        </a>
       </div>
     </section>
 
