--- a/project3.html
+++ b/project3.html
@@ -22,7 +22,7 @@
           <a href="index.html#graphic-projects">Graphic Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
-          <a href="styleguide.html">Style Guide</a>
+          <!-- <a href="styleguide.html">Style Guide</a> -->
         </nav>
         <div class="name-title">
           <h1>GRAPHIC DESIGN - Business Card</h1>
@@ -82,6 +82,24 @@
         <a href="project1.html" class="button-confirm">Next Project</a>
       </div>
     </div>
+
+    <section id="footer" class="category-row">
+      <div id="first-link" class="footer-link">
+        <a href="styleguide.html">
+          Style Guide
+        </a>
+      </div>
+      <div id="second-link" class="footer-link">
+        <a href="references.html">
+          References
+        </a>
+      </div>
+      <div id="third-link" class="footer-link">
+        <a href="https://github.com/brankaytee/Portfolio.git">
+          Git
+        </a>
+      </div>
+    </section>
 
   </body>
 </html>
