--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styleguide.css">
     <link rel="stylesheet" href="css/main.css">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/fe147576fd.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -28,7 +29,16 @@
     </section>
 
     <section id="contact" class="project-grid">
-
+      <div class="contact-wrapper">
+        <h3>Brandon Kanegae-Tse</h3>
+        <div class="email-wrapper">
+          <i class="fas fa-envelope"></i>
+          <p>bkanegae@sfu.ca</p>
+        </div>
+        <p>Vancouver, BC</p>
+        <p>Canada</p>
+        <i class="fab fa-canadian-maple-leaf"></i>
+      </div>
     </section>
 
     <section id="footer" class="category-row">
