--- a/styleguide.html
+++ b/styleguide.html
@@ -5,7 +5,8 @@
     <title>Portfolio Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styleguide.css">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/fe147576fd.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
