--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styleguide.css">
     <link rel="stylesheet" href="css/main.css">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/fe147576fd.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
