--- a/references.html
+++ b/references.html
@@ -25,6 +25,10 @@
         <div class="name-title">
           <h1>REFERENCES</h1>
         </div>
+        <ul>
+          <li>Sengjoon. (Portfolio). (2020). <strong>Reference [Portfolio]</strong>. Retrieved from <a href="#">https://www.sengjoon.com/</a>.</li>
+          <li>Font Awesome. (Website Icons). (Unknown). <strong>HTML [Icons]</strong>. Retrieved from <a href="#">https://fontawesome.com//</a>.</li>
+        </ul>
     </section>
 
     <section id="footer" class="category-row">
