--- a/styleguide.html
+++ b/styleguide.html
@@ -39,6 +39,9 @@
         <div id="third-color" class="color-block">
           <p>#70788a</p>
         </div>
+        <div id="ab-color" class="color-block">
+          <p>#ababab</p>
+        </div>
         <div id="fourth-color" class="color-block">
           <p>#b2b6bf</p>
         </div>
