project 1 write up

--- a/project1.html
+++ b/project1.html
@@ -38,7 +38,11 @@
         <p>ZBrush, Maya</p>
       </div>
       <div class="write-up">
-        <p>Hello World</p>
+        <p>The story behind this project was to create a low poly alien character to fit a futuristic space environment where the character’s role is a galactic mercenary.
+        </p>
+        <p>
+        It was my first time using ZBrush to sculpt, which made it difficult to navigate the interface and understand the tools. To overcome this I practiced sculpting separate similar shapes that replicated the structural elements of the character. Through this practice I was able to sculpt the final character more efficiently with a stronger understanding of ZBrush.
+      </p>
       </div>
 
       <h2>Process</h2>
