Added write ups for project detail pages

--- a/project2.html
+++ b/project2.html
@@ -35,10 +35,11 @@
       </div>
       <div class="programs">
         <h3>Programs Used</h3>
-        <p>ZBrush, Maya</p>
+        <p>Maya</p>
       </div>
       <div class="write-up">
-        <p>Hello World</p>
+        <p>This model was designed as secondary weapon for a futuristic space military. I discovered a fitting illustration from Pinterest, which I referenced to create an interpreted low poly model.</p>
+        <p>Creating the intricate decorative components of the gun were difficult</p>
       </div>
 
       <h2>Process</h2>
