--- a/project3.html
+++ b/project3.html
@@ -38,10 +38,11 @@
       </div>
       <div class="programs">
         <h3>Programs Used</h3>
-        <p>ZBrush, Maya</p>
+        <p>Illustrator</p>
       </div>
       <div class="write-up">
-        <p>Hello World</p>
+        <p>This business card was designed for the owner of a Japanese dessert company. The client requested for a minimalist design that presented information efficiently with an adequate amount of white space.</p>
+        <p>I was given lots of creative control over the design which made it challenging to understand exactly what the client wanted. I was able to understand my client's requirements by involving them through the iteration process and making alterations based on their feedback.</p>
       </div>
 
       <h2>Process</h2>
