all write ups finished

--- a/project2.html
+++ b/project2.html
@@ -39,7 +39,7 @@
       </div>
       <div class="write-up">
         <p>This model was designed as secondary weapon for a futuristic space military. I discovered a fitting illustration from Pinterest, which I referenced to create an interpreted low poly model.</p>
-        <p>Creating the intricate decorative components of the gun were difficult</p>
+        <p>Creating the intricate decorative components of the gun were difficult and required me to use tools I was not yet exceptional at. I practiced creating more difficult shapes than those in the gun design, which provided me exceeding knowledge to complete the decorative components.</p>
       </div>
 
       <h2>Process</h2>
